--- a/package.json
+++ b/package.json
@@ -9,18 +9,65 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
+    "@material-symbols/font-400": "^0.24.0",
+    "@nextui-org/accordion": "^2.0.40",
+    "@nextui-org/avatar": "^2.0.33",
+    "@nextui-org/badge": "^2.0.32",
+    "@nextui-org/button": "^2.0.38",
+    "@nextui-org/calendar": "^2.0.12",
+    "@nextui-org/card": "^2.0.34",
+    "@nextui-org/checkbox": "^2.1.5",
+    "@nextui-org/chip": "^2.0.33",
+    "@nextui-org/divider": "^2.0.32",
+    "@nextui-org/dropdown": "^2.1.31",
+    "@nextui-org/input": "^2.2.5",
+    "@nextui-org/kbd": "^2.0.34",
+    "@nextui-org/link": "^2.0.35",
+    "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/progress": "^2.0.34",
+    "@nextui-org/radio": "^2.1.5",
+    "@nextui-org/scroll-shadow": "^2.1.20",
+    "@nextui-org/skeleton": "^2.0.32",
+    "@nextui-org/slider": "^2.2.17",
+    "@nextui-org/spinner": "^2.0.34",
+    "@nextui-org/switch": "^2.0.34",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/table": "^2.0.40",
+    "@nextui-org/tabs": "^2.0.37",
+    "@nextui-org/theme": "^2.2.11",
+    "@nextui-org/tooltip": "^2.0.41",
+    "@nextui-org/use-infinite-scroll": "^2.1.5",
+    "@nextui-org/user": "^2.0.34",
+    "@react-stately/data": "^3.11.7",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tailwindcss/typography": "^0.5.15",
+    "@uppy/dashboard": "^4.1.0",
+    "@uppy/drag-drop": "^4.0.2",
+    "@uppy/file-input": "^4.0.1",
+    "@uppy/progress-bar": "^4.0.0",
+    "@uppy/react": "^4.0.2",
+    "framer-motion": "^11.11.4",
+    "next": "14.2.15",
     "react": "^18",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-infinite-scroller": "^1.2.6",
+    "react-toastify": "^10.0.5",
+    "react-use-precision-timer": "^3.5.5",
+    "swiper": "^11.1.14",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-infinite-scroller": "^1.2.5",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "typescript": "^5",
+    "webpack": "^5.95.0"
   }
 }
