--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@material-symbols/font-400": "^0.24.0",
     "@nextui-org/accordion": "^2.0.40",
+    "@nextui-org/autocomplete": "^2.1.7",
     "@nextui-org/avatar": "^2.0.33",
     "@nextui-org/badge": "^2.0.32",
     "@nextui-org/button": "^2.0.38",
@@ -29,6 +30,7 @@
     "@nextui-org/progress": "^2.0.34",
     "@nextui-org/radio": "^2.1.5",
     "@nextui-org/scroll-shadow": "^2.1.20",
+    "@nextui-org/select": "^2.2.7",
     "@nextui-org/skeleton": "^2.0.32",
     "@nextui-org/slider": "^2.2.17",
     "@nextui-org/spinner": "^2.0.34",
@@ -64,6 +66,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-infinite-scroller": "^1.2.5",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
