Added Level Creator AI

--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.52",
+    "@ai-sdk/openai": "^0.0.68",
     "@ducanh2912/next-pwa": "^10.2.9",
+    "@langchain/community": "^0.3.7",
+    "@langchain/core": "^0.3.13",
+    "@langchain/langgraph": "^0.2.16",
+    "@langchain/openai": "^0.3.11",
     "@material-symbols/font-400": "^0.24.0",
     "@nextui-org/accordion": "^2.0.40",
     "@nextui-org/autocomplete": "^2.1.7",
@@ -45,17 +51,21 @@
     "@react-stately/data": "^3.11.7",
     "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/typography": "^0.5.15",
+    "@uppy/core": "^4.2.2",
     "@uppy/dashboard": "^4.1.0",
-    "@uppy/drag-drop": "^4.0.2",
-    "@uppy/file-input": "^4.0.1",
+    "@uppy/drag-drop": "^4.0.3",
+    "@uppy/file-input": "^4.0.2",
     "@uppy/progress-bar": "^4.0.0",
     "@uppy/react": "^4.0.2",
+    "@uppy/tus": "^4.1.2",
+    "ai": "^3.4.16",
     "framer-motion": "^11.11.4",
     "next": "14.2.15",
     "react": "^18",
     "react-cookie": "^7.2.0",
     "react-dom": "^18",
     "react-infinite-scroller": "^1.2.6",
+    "react-markdown": "^9.0.1",
     "react-sortablejs": "^6.1.4",
     "react-toastify": "^10.0.5",
     "react-use-precision-timer": "^3.5.5",
