--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-dom": "^18",
     "react-infinite-scroller": "^1.2.6",
     "react-markdown": "^9.0.1",
+    "react-noise": "^0.2.11",
     "react-sortablejs": "^6.1.4",
     "react-toastify": "^10.0.5",
     "react-use-precision-timer": "^3.5.5",
