--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ai": "^3.4.16",
     "framer-motion": "^11.11.4",
     "next": "14.2.15",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-cookie": "^7.2.0",
     "react-dom": "^18",
