--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@nextui-org/tooltip": "^2.0.41",
     "@nextui-org/use-infinite-scroll": "^2.1.5",
     "@nextui-org/user": "^2.0.34",
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-stately/data": "^3.11.7",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
@@ -61,8 +62,12 @@
     "@uppy/react": "^4.0.2",
     "@uppy/tus": "^4.1.2",
     "ai": "^3.4.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.11.4",
+    "lucide-react": "^0.454.0",
     "next": "14.2.15",
+    "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-cookie": "^7.2.0",
@@ -73,8 +78,11 @@
     "react-sortablejs": "^6.1.4",
     "react-toastify": "^10.0.5",
     "react-use-precision-timer": "^3.5.5",
+    "recharts": "^2.13.0",
     "sortablejs": "^1.15.3",
     "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
