--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nextui-org/kbd": "^2.0.34",
     "@nextui-org/link": "^2.0.35",
     "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/progress": "^2.0.34",
     "@nextui-org/radio": "^2.1.5",
     "@nextui-org/scroll-shadow": "^2.1.20",
@@ -50,6 +51,7 @@
     "@nextui-org/use-infinite-scroll": "^2.1.5",
     "@nextui-org/user": "^2.0.34",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@react-stately/data": "^3.11.7",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
