--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@nextui-org/user": "^2.0.34",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@react-stately/data": "^3.11.7",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
