--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "@nextui-org/tooltip": "^2.0.41",
     "@nextui-org/use-infinite-scroll": "^2.1.5",
     "@nextui-org/user": "^2.0.34",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@react-stately/data": "^3.11.7",
     "@supabase/ssr": "^0.5.1",
