--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@nextui-org/use-infinite-scroll": "^2.1.5",
     "@nextui-org/user": "^2.0.34",
     "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -89,7 +90,8 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "vaul": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
